--- a/portfolio.html
+++ b/portfolio.html
@@ -13,29 +13,40 @@
   <header>
     <h2>Portfolio</h2>
     <nav>
-      <a href="#">Home</a>
-      <a href="#">About Me</a>
-      <a href="#">Projects</a>
+      <a href="#home">Home</a>
+      <a href="#about">About Me</a>
+      <a href="#project">Projects</a>
     </nav>
   </header>
 
   <!-- Hero Section -->
-  <section class="hero">
+  <section id="Home" class="hero">
     <div class="hero-text">
       <h1>Hello! <br>I am <span>Shafi Khan</span></h1>
       <h2>I am a Professional Web Developer</h2>
-      <p>I specialize in creating fully responsive user-friendly websites that perform seamlessly across all devices.</p>
+      <p>I specialize in creating fully responsive user-friendly websites<br> that perform seamlessly across all devices.</p>
       <div class="socials">
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733547.png" width="20"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/3536/3536505.png" width="20"></a>
-        <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/733/733553.png" width="20"></a>
-      </div>
+  <!-- Fiverr -->
+  <a href="https://www.fiverr.com/s/BRpkgLk" target="_blank">
+     <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" width="40" alt="Fiverr">
+  </a>
+
+  <!-- Email -->
+  <a href="mailto:shafiahmedk283@gmail.com">
+    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" width="40" alt="Email">
+  </a>
+
+  <!-- WhatsApp -->
+  <a href="https://wa.me/923318308077" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" width="40" alt="WhatsApp">
+  </a>
+</div>
     </div>
     <img src="s.png" alt="Profile Picture">
   </section>
 
   <!-- Skills -->
-  <section class="skills">
+  <section id="about" class="skills">
     <h2>My Specification</h2>
     <div class="skills-list">
 
@@ -99,14 +110,8 @@
       <div class="p_tab">
         <div class="center_box">
   
-          <div class="content">
-            <div class="content_h1"><h1>Hover Me</h1></div>
-            <div class="animation">
-            <div class="can"></div>
-          </div>
-            <div class="rock1"></div>
-            <div class="rock2"></div>
-            <div class="rock3"></div>
+          <div class="project1_box">
+           <iframe src="project1.html"></iframe>
           </div>
            <div class="parallax_box">
     <iframe src="parallex.html"></iframe>
@@ -114,6 +119,10 @@
   <div class="tic_box">
     <iframe src="tic.html"></iframe>
   </div>
+  <div class="cer_box">
+    <img src="certificate.jpg" alt="">
+  </div>
+
           
           
           <div class="close_btn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"/></svg></div>
@@ -121,7 +130,7 @@
         </div>
       </div>
   <!-- Projects -->
-  <section class="projects">
+  <section id="project" class="projects">
     <h2>Projects</h2>
     <div class="project-list">
       <div class="project-card">
@@ -136,6 +145,23 @@
         <h3>Project 3</h3>
         <button class="btn3">Click Me</button>
       </div>
+    </div>
+  </section>
+  <section id="projects" class="projects">
+    <h2>CERTIFICATE</h2>
+    <div class="project-list">
+      <div class="project-card">
+        <h3>CERTIFICATE</h3>
+        <button class="btn4">Click Me</button>
+      </div>
+      <!-- <div class="project-card">
+        <h3>Project 2</h3>
+        <button class="btn2">Click Me</button>
+      </div>
+      <div class="project-card">
+        <h3>Project 3</h3>
+        <button class="btn3">Click Me</button>
+      </div> -->
     </div>
   </section>
  <script src="portfolio.js"></script>
